@@ -102,8 +102,9 @@ b6a0b23d083e0130f8c561cca8c980814ba65740ccfa52f47159f9141089946d  hunspell-1.4.2
 bb27b86eb910a8285407cf3ca33b62643a02798cf2eef468c0a74f6c3ee6bc8a  hunspell-1.7.0.tar.gz
 fe4d33cc7393c355df7b13080e1c3717ec1acac2f8cfe452b691f33c5f467259  icu4c-4_0_1-src.tgz
 0a70491c5fdfc5a0fa7429f820da73951e07d59a268b3d8ffe052eec65820ca1  icu4c-4_8_1_1-src.tgz
-2f4d5e68d4698e87759dbdc1a586d053d96935787f79961d192c477b029d8092  icu4c-52_1-src.tgz
+68a5629d75d8e171fb893e8ae731caacc21317997a5522029b4304eefa204e7d  icu4c-52_1-src.tgz
 3dd9868d666350dda66a6e305eecde9d479fb70b30d5b55d78a1deffb97d5aa3  icu4c-62_1-src.tgz
+4653fdad69b9aba585437beae63f105b633067578c6bb26f0f515c1855a056bd  icu-release-52-1.tar.gz
 472f57f7928ab20a1303a25982c4091db9674c2729bbd692c9a7204e23ea1af4  inputproto-2.0.tar.bz2
 de7516ab25c299740da46c0f1af02f1831c5aa93b7283f512c0f35edaac2bcb0  inputproto-2.2.tar.bz2
 7d26b193f6699f8e9c1e28bf026844b7ecea33dd644402523471be109152c32f  inputproto-2.3.tar.bz2
@@ -113,7 +114,7 @@ edfc0b3e004b2fe58ffeeec89f96e3a3c28972c46725ec127d01edf8a1cc7c9a  jpegsrc.v8c.ta
 00029b1473f0f0ea72fbca3230e8cb25797fbb27e58ae2e46bb8bf5a806fe0b3  jpegsrc.v8d.tar.gz
 240fd398da741669bf3c90366f58452ea59041cacc741a489b99f2f6a0bad052  jpegsrc.v9b.tar.gz
 650250979303a649e21f87b5ccd02672af1ea6954b911342ea491f351ceb7122  jpegsrc.v9c.tar.gz
-99cb50e48a4556bc571dadd27931955ff458aae32f68c4d9c39d624693f69c32  jpegsrc.v9d.tar.gz
+2303a6acfb6cc533e0e86e8a9d29f7e6079e118b9de3f96e07a71a11c082fa6a  jpegsrc.v9d.tar.gz
 1baa29931313d0c3eb81dffd42662768cc76ce49ce94024d5fe32ef5a4e8603c  kbproto-1.0.4.tar.bz2
 037cac0aeb80c4fccf44bf736d791fccb2ff7fd34c558ef8f03ac60b61085479  kbproto-1.0.6.tar.bz2
 0bb0e594e4094d9000d80f38e96e8f640b6364f96cfef5b970cf4481443c6b3d  libdrm-2.4.22.tar.bz2
