@@ -6,7 +6,8 @@
   Cache directory is common for all systems: <LXE dir>/ccache
   Common ccache config: <LXE dir>/ccache/ccache.conf
 * Package libxkbcommon: add ability to build static library.
-* Fix download URL after changes in upstream in packages: expat, exiv2.
+* Fix download URL after changes in upstream in packages: expat, exiv2, icu4c,
+  pcre, pcre2.
 * Fix build with GCC 10 and newer in packages: make, glibc, gcc, linux-headers.
 * Remove old configs for some unsupported systems:
   - МСВС-3.0-80001-12_shared.sh
